[package]
name = "kwrite"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.13.2", features = ["train", "wgpu"] }
burn-import = "0.13.2"
tokenizers = { version = "0.20.0", features = ["http", "hf-hub"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.127"